infra/authentik/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-server
  namespace: authentik
spec:
  serviceName: authentik
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: server
  template:
    metadata:
      labels:
        app: authentik
        component: server
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: authentik
          image: docker.io/beryju/authentik:2025.2.4@sha256:36233579415aa2e2e52a6b0c45736cb871fe71460bfe0cf95d83f67528fb1182
          imagePullPolicy: IfNotPresent
          args: ["server"]
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
            - containerPort: 9300
              name: metrics
          volumeMounts:
            - name: media
              mountPath: /media
            - name: templates
              mountPath: /templates
          readinessProbe:
            httpGet:
              path: /-/health/ready/
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /-/health/live/
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
            timeoutSeconds: 3
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-authentik-server-0
        - name: templates
          persistentVolumeClaim:
            claimName: templates-authentik-server-0
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  serviceName: authentik-worker
  replicas: 1
  selector:
    matchLabels:
      app: authentik
      component: worker
  template:
    metadata:
      labels:
        app: authentik
        component: worker
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: authentik-worker
          image: docker.io/beryju/authentik:2025.2.4@sha256:36233579415aa2e2e52a6b0c45736cb871fe71460bfe0cf95d83f67528fb1182
          imagePullPolicy: IfNotPresent
          args: ["worker"]
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: media
              mountPath: /media
            - name: templates
              mountPath: /templates
          livenessProbe:
            exec:
              command: ["ak", "healthcheck"]
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec:
              command: ["ak", "healthcheck"]
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-authentik-worker-0
        - name: templates
          persistentVolumeClaim:
            claimName: templates-authentik-worker-0
