infra/authentik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: authentik
    component: server
  ports:
    - name: http
      port: 9000
      protocol: TCP
    - name: https
      port: 9443
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-worker
  namespace: authentik
spec:
  clusterIP: None
  selector:
    app: authentik
    component: worker
